Fixed the bug where the side panel icons did'nt work on smaller screens/displays.

--- a/index.css
+++ b/index.css
@@ -73,6 +73,15 @@ a {
     position: fixed;
     right: 5vw;
     bottom: 0px;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    z-index: 100;
+}
+
+.sideContent a {
+    height: 35px;
+    width: 35px;
 }
 
 .sideContent > div {
